# esp32idf_APRS

./: .gitignore  CMakeLists.txt  README.it.md  README.md  README_es.md  partitions.csv  sdkconfig
components/digirepeater/: CMakeLists.txt  digirepeater.c
components/digirepeater/include/: digirepeater.h
components/esp32_IDF_libAPRS/: AFSK.c  AFSK.h  AX25.c  AX25.h  ButterworthFilter.c  ButterworthFilter.h  CMakeLists.txt  CRC-CCIT.c  CRC-CCIT.h  FIFO.h  KISS.c  KISS.h  LibAPRS.c  LibAPRSesp.h  board_hal.c  board_hal.h  fir_filter.c  fir_filter.h  fx25.c  fx25.h  gpio.h  modem.c  modem.h  ws2812_hal.c_  ws2812_hal.h_
components/esp32_IDF_libAPRS/lwfec/: gf.c  gf.h  rs.c  rs.h
components/esp32idf_radioamateur_modem/: CMakeLists.txt  esp32idf_radioamateur_modem.h
components/esp32idf_radioamateur_modem/include/: afsk.h  ax25.h  crc_ccit.h  esp32idf_radioamateur_modem_config.h  fx25.h  modem.h
components/esp32idf_radioamateur_modem/lwfec/: gf.c  gf.h  rs.c  rs.h
components/esp32idf_radioamateur_modem/src/: afsk.c  ax25.c  crc_ccit.c  esp32idf_radioamateur_modem.c  fx25.c  kiss.c  modem.c
components/igate/: CMakeLists.txt  igate.c
components/igate/include/: igate.h
components/lastheard/: CMakeLists.txt  lastheard.c
components/lastheard/include/: lastheard.h
components/message/: CMakeLists.txt  message.c
components/message/include/: message.h
components/sensors_local/: CMakeLists.txt  Kconfig  idf_component.yml  sensors_local.c
components/sensors_local/drivers/: sensor_local_example.c
components/sensors_local/drivers/bmp180/: BMP180.h  bmp180.c  bmp180_properties.h
components/sensors_local/drivers/example/: sensor_local_telemetry_example.c  sensor_local_weather_example.c  tlm_example_properties.h  wx_example_properties.h
components/sensors_local/include/: sensor_local_properties.h  sensors_local.h
components/trafficlog/: CMakeLists.txt  trafficlog.c
components/trafficlog/include/: trafficlog.h
components/weather_telemetry/: CMakeLists.txt  weather_telemetry.c
components/weather_telemetry/include/: weather_telemetry.h
components/webconfig/: CMakeLists.txt  page_symbol.c  web_common.c  web_server.c
components/webconfig/include/: pages.h  web_common.h  web_server.h
components/webconfig/pages/: page_about.c  page_bulletins.c  page_common.c  page_digi.c  page_gnss.c  page_igate.c  page_mod.c  page_mqtt.c  page_msg.c  page_msgchat.c  page_objects.c  page_radio.c  page_sensor.c  page_station.c  page_storage.c  page_symbol.c  page_system.c  page_test.c  page_tlm.c  page_tracker.c  page_vpn.c  page_wireless.c  page_wx.c
components/webconfig/translations/: lang_en.h  lang_es.h  lang_it.h  translations.h
main/: CMakeLists.txt  app_config.c  aprs_filter.c  aprs_service.c  beacon.c  beacon_scheduler.c  bulletins.c  cpu_freq.c  idf_component.yml  main.c  net_state.c  objects_items.c  storage.c  time_sync.c  weather.c
main/include/: app_config.h  aprs_filter.h  aprs_service.h  beacon.h  beacon_scheduler.h  bulletins.h  cpu_freq.h  net_state.h  objects_items.h  storage.h  time_sync.h  weather.h
schematics/UV5R_full_EN/: UV5R_full_EN.kicad_pcb  UV5R_full_EN.kicad_prl  UV5R_full_EN.kicad_pro  UV5R_full_EN.kicad_sch
schematics/UV5R_full_ES/: UV5R_full_ES.kicad_prl  UV5R_full_ES.kicad_pro  UV5R_full_ES.kicad_sch
temp/: kiss.h  page_symbol.c
