idf_component_register(
    SRCS
        "main.c"
        "app_config.c"
        "storage.c"
        "aprs_service.c"
        "aprs_filter.c"
        "net_state.c"
        "beacon.c"
        "beacon_scheduler.c"
        "bulletins.c"
        "objects_items.c"
        "weather.c"
        "time_sync.c"
        "cpu_freq.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        json
        mbedtls
        esp_app_format
        app_update
        spi_flash
        esp_timer
        esp_pm
        lwip
        webconfig
        esp32idf_radioamateur_modem
        digirepeater
        igate
        message
        trafficlog
        lastheard
        sensors_local
        weather_telemetry
)
