idf_component_register(
    SRCS
        "web_common.c"
        "web_server.c"
        "pages/page_common.c"
        "pages/page_station.c"
        "pages/page_storage.c"
        "pages/page_wireless.c"
        "pages/page_system.c"
        "pages/page_about.c"
        "pages/page_igate.c"
        "pages/page_digi.c"
        "pages/page_tracker.c"
        "pages/page_wx.c"
        "pages/page_tlm.c"
        "pages/page_radio.c"
        "pages/page_vpn.c"
        "pages/page_mqtt.c"
        "pages/page_msg.c"
        "pages/page_msgchat.c"
        "pages/page_gnss.c"
        "pages/page_mod.c"
        "pages/page_symbol.c"
        "pages/page_test.c"
    INCLUDE_DIRS
        "include"
        "translations"
        "../../main/include"
    REQUIRES
        esp_http_server
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        json
        mbedtls
        esp_app_format
        app_update
        spi_flash
        esp_timer
        trafficlog
        lastheard
        igate
        digirepeater
        esp32idf_radioamateur_modem
        sensors_local
        weather_telemetry
        message
)
